--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 <div>✅Complete the Steps correctly &amp; congratulations.</div>
 </div>
 </div>
-<div class="de elImageWrapper de-image-block elAlign_center elMargin0 de-editable ui-droppable" id="tmp_image-78142" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" data-imagelink="https://mosrobxs.github.io/osba/kosart.html" aria-disabled="false">
-<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" class="elIMG ximg" alt="" width="500" data-imagelink="https://mosrobxs.github.io/osba/kosart.html" data-src="https://i.ibb.co/chgvs4y/jhg324lkjh32g4.png">
+<div class="de elImageWrapper de-image-block elAlign_center elMargin0 de-editable ui-droppable" id="tmp_image-78142" data-de-type="img" data-de-editing="false" data-title="image" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer;" data-imagelink="https://womrobxs.github.io/kosta/gamosa.html" aria-disabled="false">
+<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" class="elIMG ximg" alt="" width="500" data-imagelink="https://womrobxs.github.io/kosta/gamosa.html" data-src="https://i.ibb.co/chgvs4y/jhg324lkjh32g4.png">
 </div>
 </div>
 </div>
